hopefully fix horizontal scroll on why and connect pages

--- a/assets/scss/mpowheard.scss
+++ b/assets/scss/mpowheard.scss
@@ -508,6 +508,7 @@ body {
 }
 
 #why, #connect {
+	overflow-x: hidden !important;
 	div.section-content {
 	 	max-width:71.25rem;
 	 	margin:auto;
